--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.23.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-flexbox-grid": "^2.1.2",
     "react-material-ui-form-validator": "^2.0.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
@@ -47,5 +48,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "less-loader": "^4.1.0"
+  }
 }
